--- a/sparse.1
+++ b/sparse.1
@@ -24,7 +24,7 @@ off those warnings, pass the negation of the associated warning option,
 Turn on all sparse warnings, except for those explicitly disabled via
 \fB\-Wno\-something\fR.
 .TP
-.B \-Werror
+.B \-Wsparse\-error
 Turn all sparse warnings into errors.
 .TP
 .B \-Waddress\-space
