Update maintainers in the manpage
The manpage still mentioned Josh Triplett as the maintainer
while Christopher is the maintainer since 2009.

CC: Christopher Li <sparse@chrisli.org>
CC: Josh Triplett <josh@joshtriplett.org>
Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>
Reviewed-by: Josh Triplett <josh@joshtriplett.org>
Signed-off-by: Christopher Li <sparse@chrisli.org>

--- a/sparse.1
+++ b/sparse.1
@@ -361,4 +361,4 @@ http://www.kernel.org/pub/software/devel/sparse/
 linux-sparse@vger.kernel.org
 .
 .SH MAINTAINER
-Josh Triplett <josh@kernel.org>
+Christopher Li <sparse@chrisli.org>
