--- a/sparse.1
+++ b/sparse.1
@@ -346,6 +346,11 @@ normalized GNU triplet. (e.g. i386-linux-gnu).
 .
 .SH DEBUG OPTIONS
 .TP
+.B \-fdump-linearize[=only]
+Dump the IR code of a function directly after its linearization,
+before any simplifications is made. If the argument \fB=only\fR is
+also given no further processing is done on the function.
+.
 .B \-fmem-report
 Report some statistics about memory allocation used by the tool.
 .
