use -fmem-report to report allocation stats
Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/sparse.1
+++ b/sparse.1
@@ -344,6 +344,11 @@ Look for system headers in the multiarch subdirectory \fIdir\fR.
 The \fIdir\fR name would normally take the form of the target's
 normalized GNU triplet. (e.g. i386-linux-gnu).
 .
+.SH DEBUG OPTIONS
+.TP
+.B \-fmem-report
+Report some statistics about memory allocation used by the tool.
+.
 .SH OTHER OPTIONS
 .TP
 .B \-ftabstop=WIDTH
