option: use OPTION_NUMERIC() for handle_switch_fmemcpy_max_count()
Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/sparse.1
+++ b/sparse.1
@@ -369,7 +369,7 @@ Report some statistics about memory allocation used by the tool.
 .TP
 .B \-fmemcpy-max-count=COUNT
 Set the limit for the warnings given by \fB-Wmemcpy-max-count\fR.
-A COUNT of 0, useless in itself, will effectively disable the warning.
+A COUNT of 'unlimited' or '0' will effectively disable the warning.
 The default limit is 100000.
 .
 .TP
