sparse: document that -Wbitwise is default
In commit commit 02a886bfa3d9 ("Introduce keyword driven
attribute parsing", 2007-03-08) the -Wbitwise keyword was broken and did
not actually work. Instead, bitwise checks were always enabled.

This was fixed by commit commit 0dfda0d1f0fe ("make -Wbitwise
operational again", 2017-02-18) which allowed -Wbitwise and -Wno-bitwise
to work as expected.

However, since -Wbitwise was enabled for so long, that commit changed
the default of -Wbitwise to be enabled, rather than the documented
"disabled".

Fix the documentation to match, and explain that -Wbitwise is enabled by
default and must be disabled.

Signed-off-by: Jacob Keller <jacob.e.keller@intel.com>
Acked-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>
Signed-off-by: Christopher Li <sparse@chrisli.org>

--- a/sparse.1
+++ b/sparse.1
@@ -67,8 +67,8 @@ kind of like "NULL" for pointers). So "gfp_t" or the "safe endianness"
 types would be __bitwise: you can only operate on them by doing
 specific operations that know about *that* particular type.
 
-Generally, you want bitwise if you are looking for type safety. Sparse
-does not issue these warnings by default.
+Sparse issues these warnings by default.  To turn them off, use
+\fB\-Wno\-bitwise\fR.
 .
 .TP
 .B \-Wcast\-to\-as
