man: add section about reporting bugs
Add a small section about contributing and reporting bugs.

Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/sparse.1
+++ b/sparse.1
@@ -454,5 +454,14 @@ http://www.kernel.org/pub/software/devel/sparse/
 .SH MAILING LIST
 linux-sparse@vger.kernel.org
 .
+.SH CONTRIBUTINGS AND REPORTING BUGS
+Submission of patches and reporting of bugs, as well as discussions
+related to Sparse, should be done via the mailing list (linux-sparse@vger.kernel.org)
+where the development and maintenance is primarily done.
+You do not have to be subscribed to the list to send a message there.
+
+Bugs can also be reported and tracked via the Linux kernel's bugzilla:
+http://bugzilla.kernel.org/enter_bug.cgi?component=Sparse&product=Tools .
+.
 .SH MAINTAINER
 Christopher Li <sparse@chrisli.org>
