--- a/sparse.1
+++ b/sparse.1
@@ -463,5 +463,10 @@ You do not have to be subscribed to the list to send a message there.
 Bugs can also be reported and tracked via the Linux kernel's bugzilla:
 http://bugzilla.kernel.org/enter_bug.cgi?component=Sparse&product=Tools .
 .
+.SH AUTHORS
+Sparse was started by Linus Torvalds.
+The complete list of contributors can be find at
+https://www.openhub.net/p/sparse/contributors .
+
 .SH MAINTAINER
 Christopher Li <sparse@chrisli.org>
