man: update maintainer info
Update the info about the maintainer.

Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/sparse.1
+++ b/sparse.1
@@ -468,5 +468,4 @@ Sparse was started by Linus Torvalds.
 The complete list of contributors can be find at
 https://www.openhub.net/p/sparse/contributors .
 
-.SH MAINTAINER
-Christopher Li <sparse@chrisli.org>
+Luc Van Oostenryck is Sparse's current maintainer.
