manpage: fix doc of '-Wcast-from-as'
It seems that the current doc for -Wcast-from-as was cut-and-pasted
but not adjusted correctly.

Fix the wording.

Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/sparse.1
+++ b/sparse.1
@@ -85,7 +85,7 @@ Sparse does not issue these warnings by default.
 .
 .TP
 .B \-Wcast\-from\-as
-Warn about which remove an address space to a pointer type.
+Warn about casts which remove an address space from a pointer type.
 
 This is similar to \fB\-Waddress\-space\fR but will also warn
 on casts to \fBunsigned long\fR.
