--- a/sparse.1
+++ b/sparse.1
@@ -511,6 +511,10 @@ You do not have to be subscribed to the list to send a message there.
 Bugs can also be reported and tracked via the Linux kernel's bugzilla:
 http://bugzilla.kernel.org/enter_bug.cgi?component=Sparse&product=Tools .
 .
+.SH DOCUMENTATION
+More documentation about Sparse can be found at
+https://sparse.docs.kernel.org
+.
 .SH AUTHORS
 Sparse was started by Linus Torvalds.
 The complete list of contributors can be find at
