doc: fix code-block formatting in v0.6.2 relnotes
The small code example at the top was in normal text-style
(which is fine) but was lacking the newline between the two
statements (which is much less fine).

Fix this by using a '::' instead of a ':' to trigger the
literal-code-block-and-more style.

Reported-by: Ramsay Jones <ramsay@ramsayjones.plus.com>
Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/Documentation/release-notes/v0.6.2.rst
+++ b/Documentation/release-notes/v0.6.2.rst
@@ -10,7 +10,7 @@ V0.6.2
 * add support for _Generic
 
 * fully propagate declarations downward.
-    For example, it means that code like:
+    For example, it means that code like::
 
         static int foo(void);
         int foo(void) { return 0; }
