--- a/Documentation/release-notes/v0.6.2.rst
+++ b/Documentation/release-notes/v0.6.2.rst
@@ -1,5 +1,5 @@
-V0.6.2
-======
+v0.6.2 (2020-06-21)
+===================
 
 * add a new tool: sindex - the semantic utility
     Sindex is a simple to use cscope-like tool but understanding
@@ -25,7 +25,7 @@ V0.6.2
     * try to support the various floating-point ABIs on ARM
     * fix wchar_t & wint_t for openbsd
     * add missing predefines for PPC
-    * add missing predfines: __amd64 & __amd64__
+    * add missing predefines: __amd64 & __amd64__
     * sparc32 on SunOS/Solaris uses 128-bit long double
     * fix wchar_t & wint_t on SunOS/Solaris
     * teach sparse about -fshort-wchar
@@ -58,6 +58,7 @@ V0.6.2
     * simplify parsing of inline/__tls/__visible
     * better handle function-only attributes
     * teach sparse about gnu_inline
+    * parse enum attributes and, for now, ignore them
 
 * cgcc:
     * use -fshort-char for Cygwin
@@ -81,8 +82,11 @@ V0.6.2
 
 * doc:
     * do not use obsolete sphinx's AutodocReporter
+    * Sphinx's minimal version is now 1.7
     * add basic doc about the type system
     * doc is now accessible as: https://sparse.docs.kernel.org
+    * release notes (old and current ones) have been added to the doc
+    * now using the sphinx_rtd_theme instead of the classic theme
 
 * misc:
     * add support for '-std=c17/c18'
@@ -95,4 +99,6 @@ V0.6.2
     * fix premature examination of dereferenced object
     * various fixes for the expansion of constant symbols
     * fix type compatibility of _Atomic types
+    * add support for builtin macros with argument
+    * add support for __has_feature() & __has_extension()
 
