--- a/semind.1
+++ b/semind.1
@@ -1,27 +1,27 @@
 .\" Sindex manpage by Alexey Gladkov
-.TH sindex "1"
+.TH semind "1"
 .
 .SH NAME
-sindex \- Semantic Indexer for C
+semind \- Semantic Indexer for C
 .
 .SH SYNOPSIS
-.B sindex
+.B semind
 [\fIoptions\fR]
 .br
-.B sindex
+.B semind
 [\fIoptions\fR] \fIadd\fR [\fIcommand options\fR] [\fI--\fR] [\fIcompiler options\fR] [\fIfiles...\fR]
 .br
-.B sindex
+.B semind
 [\fIoptions\fR] \fIrm\fR [\fIcommand options\fR] \fIpattern\fR
 .br
-.B sindex
+.B semind
 [\fIoptions\fR] \fIsearch\fR [\fIcommand options\fR] [\fIpattern\fR]
 .br
-.B sindex [\fIoptions\fR] \fIsearch\fR [\fIcommand options\fR] (\fI-e\fR|\fI-l\fR) \fIfilename\fR:\fIlinenr\fR:\fIcolumn\fR
+.B semind [\fIoptions\fR] \fIsearch\fR [\fIcommand options\fR] (\fI-e\fR|\fI-l\fR) \fIfilename\fR:\fIlinenr\fR:\fIcolumn\fR
 .br
 .SH DESCRIPTION
 .P
-sindex is the simple to use cscope-like tool based on sparse/dissect.  Unlike
+semind is the simple to use cscope-like tool based on sparse/dissect.  Unlike
 cscope it runs after pre-processor and thus it can't index the code filtered out
 by ifdef's, but otoh it understands how the symbol is used and it can track the
 usage of struct members.
@@ -44,7 +44,7 @@ wildcard pattern.
 .SH COMMON OPTIONS
 .TP
 \fB-D\fR, \fB--database=FILE\fR
-specify database file (default: ./sindex.sqlite).
+specify database file (default: ./semind.sqlite).
 .TP
 \fB-v\fR, \fB--verbose\fR
 show information about what is being done.
