union-cast: teach sparse about union casts
A cast to union type is a GCC extension similar to a compound
literal just for union, using the syntax of a cast.

However, sparse doesn't know about them and treats them like
other casts to non-scalars.

So, teach sparse about them, convert them to the corresponding
compound literal and add a warning flag to enable/disable the
associated warning: -W[no-]union-cast.

Note: a difference between union casts and compound literals
      is that the union casts yield rvalues while compound
      literals are lvalues but this distinction is not yet done
      in this series.

Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/sparse.1
+++ b/sparse.1
@@ -451,6 +451,12 @@ The concerned warnings are, for example, those triggered by
 Sparse does not issue these warnings by default, processing '{\ 0\ }'
 the same as '{\ }'.
 .
+.TP
+.B -Wunion-cast
+Warn on casts to union types.
+
+Sparse does not issues these warnings by default.
+.
 .SH MISC OPTIONS
 .TP
 .B \-\-arch=\fIARCH\fR
